infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels: # identifier for pods being created
        app: event-bus
    spec:
      containers:
        - name: event-bus
        # it is preferred that we don't manually apply version below as it will
        # introduce bug easily, without specifying version after image, it will always be the latest
          image: edward/event-bus:eventbussvc
          # imagePullPolicy: Never
