infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels: # identifier for pods being created
        app: comments
    spec:
      containers:
        - name: comments
        # it is preferred that we don't manually apply version below as it will
        # introduce bug easily, without specifying version after image, it will always be the latest
          image: edward/comments:commentssvc # this matches with the tag when you run docker build -t 
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  selector:
    app: comments # this service should look for app called comments service defined above
  type: ClusterIP
  ports: 
    - name: comments
      protocol: TCP
      port: 4001 # listen request that goes to port 4001
      targetPort: 4001 # target port is same port defined in comments service app code
