infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels: # identifier for pods being created
        app: moderation
    spec:
      containers:
        - name: moderation
        # it is preferred that we don't manually apply version below as it will
        # introduce bug easily, without specifying version after image, it will always be the latest
          image: edward/moderation:moderationsvc # this matches with the tag when you run docker build -t 
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector:
    app: moderation # this service should look for app called moderation service defined above
  type: ClusterIP
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003 # listen request that goes to port 4003
      targetPort: 4003 # target port is same port defined in moderation service app code
