infra/k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels: # identifier for pods being created
        app: posts
    spec:
      containers:
        - name: posts
        # it is preferred that we don't manually apply version below as it will
        # introduce bug easily, without specifying version after image, it will always be the latest
          image: edward/posts:postsvc # this matches with the tag when you run docker build -t 
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts # this service should look for app called posts service defined above
  type: ClusterIP
  ports: 
    - name: posts
      protocol: TCP
      port: 4000 # listen request that goes to port 4000
      targetPort: 4000 # target port is same port defined in posts service app code
