infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: # telling k8s to find all pods with lable called posts and expose them to outside world
    app: posts
  ports: # we need to specify which ports we want to expose
    - name: posts
      protocol: TCP
      port: 4000 # which port outside traffic should be sent to the k8s service
      targetPort: 4000 # the actual port that application is listening for traffic
