infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels: # identifier for pods being created
        app: query
    spec:
      containers:
        - name: query
        # it is preferred that we don't manually apply version below as it will
        # introduce bug easily, without specifying version after image, it will always be the latest
          image: edward/query:querysvc # this matches with the tag when you run docker build -t 
          # imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  selector:
    app: query # this service should look for app called query service defined above
  type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      port: 4002 # listen request that goes to port 4002
      targetPort: 4002 # target port is same port defined in query service app code
